--- a/index.html
+++ b/index.html
@@ -19,33 +19,368 @@
           <ul class="nav__list grid">
             <li class="nav__item">
               <a href="#home" class="nav__link">
-                <i class="uil uil-estate"></i> Home
+                <i class="uil uil-estate nav__icon"></i> Home
               </a>
             </li>
             <li class="nav__item">
               <a href="#about" class="nav__link">
-                <i class="uil uil-user"></i> User
+                <i class="uil uil-user nav__icon"></i> User
               </a>
             </li>
             <li class="nav__item">
               <a href="#skills" class="nav__link">
-                <i class="uil uil-file-alt"></i> Skills
+                <i class="uil uil-file-alt nav__icon"></i> Skills
               </a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link"></a>
+              <a href="#" class="nav__link">
+                <i class="uil uil-briefcase-alt nav__icon"></i> Services
+              </a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link"></a>
+              <a href="#portifolio" class="nav__link">
+                <i class="uil uil-scenery nav__icon"></i> Portifolio
+              </a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link"></a>
+              <a href="#contact" class="nav__link">
+                <i class="uil uil-message nav__icon"></i> Contact me
+              </a>
             </li>
           </ul>
+          <i class="uil uil-times nav__close" id="nav-close"></i>
+        </div>
+
+        <div class="nav__btns">
+          <div class="nav__toggle" id="nav-toggle">
+            <i class="uil uil-apps"></i>
+          </div>
         </div>
       </nav>
     </header>
-    <main class="main"></main>
+
+    <main class="main">
+      <!-- HOME -->
+      <section class="home section" id="home">
+        <div class="home__container container grid">
+          <div class="home__content grid">
+            <div class="home__social">
+              <a
+                href="https://www.linkedin.com/in/alerrandrojanio/"
+                class="home__social-icon"
+                target="_blank"
+              >
+                <i class="uil uil-linkedin-alt"></i>
+              </a>
+              <a
+                href="https://github.com/alerrandrojanio"
+                class="home__social-icon"
+                target="_blank"
+              >
+                <i class="uil uil-github-alt"></i>
+              </a>
+              <a
+                href="https://www.instagram.com/alerrandrojanio/"
+                class="home__social-icon"
+                target="_blank"
+              >
+                <i class="uil uil-instagram"></i>
+              </a>
+            </div>
+
+            <div class="home__img">
+              <svg
+                class="home__blob"
+                viewBox="0 0 200 187"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+              >
+                <mask id="mask0" mask-type="alpha">
+                  <path
+                    d="M190.312 36.4879C206.582 62.1187 201.309 102.826 182.328 134.186C163.346 165.547 
+                    130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 129.362C2.45775 
+                    97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 -0.149132 97.9666 
+                    0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"
+                  />
+                </mask>
+                <g mask="url(#mask0)">
+                  <path
+                    d="M190.312 36.4879C206.582 62.1187 201.309 102.826 182.328 134.186C163.346 
+                    165.547 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 
+                    129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
+                    -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"
+                  />
+                  <image
+                    class="home__blob-img"
+                    x="12"
+                    y="18"
+                    href="./assets/img/perfil.png"
+                  />
+                </g>
+              </svg>
+            </div>
+
+            <div class="home__data">
+              <h1 class="home__title">Olá, eu sou Alerrandro</h1>
+              <h3 class="home__subtitle">Fullstack Developer</h3>
+              <p class="home__description">
+                Graduando em Sistemas de Informação na UFC, como também
+                trabalhando como suporte de TI e auxiliar no setor financeiro do
+                LAC Dr. José Maria Leitão.
+              </p>
+              <a href="#contact" class="button button--flex">
+                Contact Me <i class="uil uil-message button__icon"></i>
+              </a>
+            </div>
+          </div>
+
+          <div class="home__scroll">
+            <a href="#about" class="home__scroll-button button--flex">
+              <i class="uil uil-mouse-alt home__scroll-mouse"></i>
+              <span class="home__scroll-name">Scroll down</span>
+              <i class="uil uil-arrow-down home__scroll-arrow"></i>
+            </a>
+          </div>
+        </div>
+      </section>
+
+      <!-- ABOUT -->
+      <section class="about section" id="about">
+        <h2 class="section__title">About me</h2>
+        <span class="section__subtitle">My introduction</span>
+
+        <div class="about__container container grid">
+          <img src="./assets/img/about.jpg" alt="" class="about__img" />
+
+          <div class="about__data">
+            <p class="about__description">
+              Técnico em Informática com conhecimentos tanto front-end (HTML,
+              CSS, JS), Frameworks (VueJs e React) quanto em back-end (Node.js,
+              C# e Java), além de banco de dados SQL (MySQL, PostgreSQL e SQL
+              Server). Com experiência básica em outras linguagens como Php e
+              Python. Atualmente estudando a fundo a plataforma .NET e também
+              desenvolvimento web com React.
+            </p>
+            <div class="about__info">
+              <div>
+                <span class="about__info-title">08+</span>
+                <span class="about__info-name"
+                  >Years <br />
+                  experience</span
+                >
+              </div>
+
+              <div>
+                <span class="about__info-title">20+</span>
+                <span class="about__info-name"
+                  >Complete <br />
+                  project</span
+                >
+              </div>
+
+              <div>
+                <span class="about__info-title">05+</span>
+                <span class="about__info-name"
+                  >Companies <br />
+                  wordked</span
+                >
+              </div>
+            </div>
+
+            <div class="about__buttons">
+              <a
+                download=""
+                href="./assets/pdf/Alexa-Cv.pdf"
+                class="button button--flex"
+              >
+                Download CV <i class="uil uil-download-alt button__icon"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- SKILLS -->
+      <section class="skill section" id="skills">
+        <h2 class="section__title">Skills</h2>
+        <span class="section__subtitle">My technical level</span>
+
+        <div class="skills__container container grid">
+          <div>
+            <!-- Skill 1 -->
+            <div class="skills__content skills__open">
+              <div class="skills__header">
+                <i class="uil uil-brackets-curly skills__icon"></i>
+
+                <div>
+                  <h1 class="skills__title">Frontend developer</h1>
+                  <span class="skills__subtitle">Morde than 4 years</span>
+                </div>
+
+                <i class="uil uil-angle-down skills__arrow"></i>
+              </div>
+
+              <div class="skills__list grid">
+                <!-- HTML -->
+                <div class="skills_data">
+                  <div class="skills__titles">
+                    <h3 class="skills_name">HTML</h3>
+                    <span class="skills__number">90%</span>
+                  </div>
+                  <div class="skills__bar">
+                    <span class="skills__percentage skills__html"></span>
+                  </div>
+                </div>
+
+                <!-- CSS -->
+                <div class="skills_data">
+                  <div class="skills__titles">
+                    <h3 class="skills_name">CSS</h3>
+                    <span class="skills__number">80%</span>
+                  </div>
+                  <div class="skills__bar">
+                    <span class="skills__percentage skills__css"></span>
+                  </div>
+                </div>
+
+                <!-- Javascript -->
+                <div class="skills_data">
+                  <div class="skills__titles">
+                    <h3 class="skills_name">JavaScript</h3>
+                    <span class="skills__number">60%</span>
+                  </div>
+                  <div class="skills__bar">
+                    <span class="skills__percentage skills__js"></span>
+                  </div>
+                </div>
+
+                <!-- React -->
+                <div class="skills_data">
+                  <div class="skills__titles">
+                    <h3 class="skills_name">React</h3>
+                    <span class="skills__number">50%</span>
+                  </div>
+                  <div class="skills__bar">
+                    <span class="skills__percentage skills__react"></span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Skill 2 -->
+            <div class="skills__content skills__close">
+              <div class="skills__header">
+                <i class="uil uil-server-network skills__icon"></i>
+
+                <div>
+                  <h1 class="skills__title">Backend developer</h1>
+                  <span class="skills__subtitle">Morde than 2 years</span>
+                </div>
+
+                <i class="uil uil-angle-down skills__arrow"></i>
+              </div>
+
+              <div class="skills__list grid">
+                <!-- C# -->
+                <div class="skills_data">
+                  <div class="skills__titles">
+                    <h3 class="skills_name">C#</h3>
+                    <span class="skills__number">90%</span>
+                  </div>
+                  <div class="skills__bar">
+                    <span class="skills__percentage skills__csharp"></span>
+                  </div>
+                </div>
+
+                <!-- Node -->
+                <div class="skills_data">
+                  <div class="skills__titles">
+                    <h3 class="skills_name">Node Js</h3>
+                    <span class="skills__number">70%</span>
+                  </div>
+                  <div class="skills__bar">
+                    <span class="skills__percentage skills__node"></span>
+                  </div>
+                </div>
+
+                <!-- Java -->
+                <div class="skills_data">
+                  <div class="skills__titles">
+                    <h3 class="skills_name">Java</h3>
+                    <span class="skills__number">60%</span>
+                  </div>
+                  <div class="skills__bar">
+                    <span class="skills__percentage skills__java"></span>
+                  </div>
+                </div>
+
+                <!-- SQL -->
+                <div class="skills_data">
+                  <div class="skills__titles">
+                    <h3 class="skills_name">SQL</h3>
+                    <span class="skills__number">80%</span>
+                  </div>
+                  <div class="skills__bar">
+                    <span class="skills__percentage skills__sql"></span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div>
+            <!-- Skill 3 -->
+            <div class="skills__content skills__close">
+              <div class="skills__header">
+                <i class="uil uil-swatchbook skills__icon"></i>
+
+                <div>
+                  <h1 class="skills__title">Designer</h1>
+                  <span class="skills__subtitle">Morde than 5 years</span>
+                </div>
+
+                <i class="uil uil-angle-down skills__arrow"></i>
+              </div>
+
+              <div class="skills__list grid">
+                <!-- Figma -->
+                <div class="skills_data">
+                  <div class="skills__titles">
+                    <h3 class="skills_name">Figma</h3>
+                    <span class="skills__number">90%</span>
+                  </div>
+                  <div class="skills__bar">
+                    <span class="skills__percentage skills__figma"></span>
+                  </div>
+                </div>
+
+                <!-- Photoshop -->
+                <div class="skills_data">
+                  <div class="skills__titles">
+                    <h3 class="skills_name">Photoshop</h3>
+                    <span class="skills__number">70%</span>
+                  </div>
+                  <div class="skills__bar">
+                    <span class="skills__percentage skills__photoshop"></span>
+                  </div>
+                </div>
+
+                <!-- Corel -->
+                <div class="skills_data">
+                  <div class="skills__titles">
+                    <h3 class="skills_name">Corel</h3>
+                    <span class="skills__number">60%</span>
+                  </div>
+                  <div class="skills__bar">
+                    <span class="skills__percentage skills__corel"></span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <script src="./assets/js/main.js"></script>
   </body>
 </html>
