--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
       href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
     />
+    <link rel="stylesheet" href="./assets/css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./assets/css/styles.css" />
     <title>Alerrandro</title>
   </head>
@@ -33,7 +34,7 @@
               </a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link">
+              <a href="#services" class="nav__link">
                 <i class="uil uil-briefcase-alt nav__icon"></i> Services
               </a>
             </li>
@@ -60,7 +61,7 @@
     </header>
 
     <main class="main">
-      <!-- HOME -->
+      <!-------------------- HOME -------------------->
       <section class="home section" id="home">
         <div class="home__container container grid">
           <div class="home__content grid">
@@ -144,7 +145,7 @@
         </div>
       </section>
 
-      <!-- ABOUT -->
+      <!-------------------- ABOUT -------------------->
       <section class="about section" id="about">
         <h2 class="section__title">About me</h2>
         <span class="section__subtitle">My introduction</span>
@@ -200,14 +201,14 @@
         </div>
       </section>
 
-      <!-- SKILLS -->
+      <!-------------------- SKILLS -------------------->
       <section class="skill section" id="skills">
         <h2 class="section__title">Skills</h2>
         <span class="section__subtitle">My technical level</span>
 
         <div class="skills__container container grid">
           <div>
-            <!-- Skill 1 -->
+            <!-------------------- Skill 1 -------------------->
             <div class="skills__content skills__open">
               <div class="skills__header">
                 <i class="uil uil-brackets-curly skills__icon"></i>
@@ -267,7 +268,7 @@
               </div>
             </div>
 
-            <!-- Skill 2 -->
+            <!-------------------- Skill 2 -------------------->
             <div class="skills__content skills__close">
               <div class="skills__header">
                 <i class="uil uil-server-network skills__icon"></i>
@@ -329,7 +330,7 @@
           </div>
 
           <div>
-            <!-- Skill 3 -->
+            <!-------------------- Skill 3 -------------------->
             <div class="skills__content skills__close">
               <div class="skills__header">
                 <i class="uil uil-swatchbook skills__icon"></i>
@@ -381,7 +382,7 @@
         </div>
       </section>
 
-      <!-- QUALIFICATIONS -->
+      <!-------------------- QUALIFICATIONS -------------------->
       <section class="qualification section">
         <h2 class="section__title">Qualification</h2>
         <span class="section__subtitle">Mypersonal journey</span>
@@ -403,13 +404,13 @@
           </div>
 
           <div class="qualification__sections">
-            <!-- Qualification Content 1 -->
+            <!-------------------- Qualification Content 1 -------------------->
             <div
               class="qualification__content qualification__active"
               data-content
               id="education"
             >
-              <!-- Qualification 1 -->
+              <!-------------------- Qualification 1 -------------------->
               <div class="qualification__data">
                 <div>
                   <h3 class="qualification__title">Web Design</h3>
@@ -426,7 +427,7 @@
                 </div>
               </div>
 
-              <!-- Qualification 2 -->
+              <!-------------------- Qualification 2 -------------------->
               <div class="qualification__data">
                 <div></div>
 
@@ -445,7 +446,7 @@
                 </div>
               </div>
 
-              <!-- Qualification 3 -->
+              <!-------------------- Qualification 3 -------------------->
               <div class="qualification__data">
                 <div>
                   <h3 class="qualification__title">Web Development</h3>
@@ -462,7 +463,7 @@
                 </div>
               </div>
 
-              <!-- Qualification 4 -->
+              <!-------------------- Qualification 4 -------------------->
               <div class="qualification__data">
                 <div></div>
 
@@ -482,9 +483,9 @@
               </div>
             </div>
 
-            <!-- Qualification Content 2 -->
+            <!-------------------- Qualification Content 2 -------------------->
             <div class="qualification__content" data-content id="work">
-              <!-- Qualification 5 -->
+              <!-------------------- Qualification 5 -------------------->
               <div class="qualification__data">
                 <div>
                   <h3 class="qualification__title">Software Enginner</h3>
@@ -501,7 +502,7 @@
                 </div>
               </div>
 
-              <!-- Qualification 6 -->
+              <!-------------------- Qualification 6 -------------------->
               <div class="qualification__data">
                 <div></div>
 
@@ -520,7 +521,7 @@
                 </div>
               </div>
 
-              <!-- Qualification 7 -->
+              <!-------------------- Qualification 7 -------------------->
               <div class="qualification__data">
                 <div>
                   <h3 class="qualification__title">Web Development</h3>
@@ -540,7 +541,243 @@
           </div>
         </div>
       </section>
+
+      <!-------------------- SERVICES -------------------->
+      <section class="services section" id="services">
+        <h2 class="section__title">Services</h2>
+        <span class="section__subtitle">What i offer</span>
+
+        <div class="services__container container grid">
+          <!-------------------- Services 1 -------------------->
+          <div class="services__content">
+            <div>
+              <i class="uil uil-web-grid services__icon"></i>
+              <h3 class="services__title">
+                Ui/Ux <br />
+                Designer
+              </h3>
+            </div>
+
+            <span
+              class="button button--flex button--small button--link services__button"
+            >
+              View more
+              <i class="uil uil-arrow-right button__icon"></i>
+            </span>
+
+            <div class="services__modal">
+              <div class="services__modal-content">
+                <h4 class="services__modal-title">
+                  Ui/Ux <br />
+                  Designer
+                </h4>
+                <i class="uil uil-times services__modal-close"></i>
+
+                <ul class="services__modal-services grid">
+                  <li class="services__modal-service">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>I develop the user interface</p>
+                  </li>
+                  <li class="services__modal-service">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>Web page development</p>
+                  </li>
+                  <li class="services__modal-service">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>I develop the user interface</p>
+                  </li>
+                  <li class="services__modal-service">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>Web page development</p>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <!-------------------- Services 2 -------------------->
+          <div class="services__content">
+            <div>
+              <i class="uil uil-arrow services__icon"></i>
+              <h3 class="services__title">
+                Frontend <br />
+                Developer
+              </h3>
+            </div>
+
+            <span
+              class="button button--flex button--small button--link services__button"
+            >
+              View more
+              <i class="uil uil-arrow-right button__icon"></i>
+            </span>
+
+            <div class="services__modal">
+              <div class="services__modal-content">
+                <h4 class="services__modal-title">
+                  Frontend <br />
+                  Developer
+                </h4>
+                <i class="uil uil-times services__modal-close"></i>
+
+                <ul class="services__modal-services grid">
+                  <li class="services__modal-service">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>I develop the user interface</p>
+                  </li>
+                  <li class="services__modal-service">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>Web page development</p>
+                  </li>
+                  <li class="services__modal-service">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>I develop the user interface</p>
+                  </li>
+                  <li class="services__modal-service">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>Web page development</p>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <!-------------------- Services 3 -------------------->
+          <div class="services__content">
+            <div>
+              <i class="uil uil-server-network services__icon"></i>
+              <h3 class="services__title">
+                Backend <br />
+                Developer
+              </h3>
+            </div>
+
+            <span
+              class="button button--flex button--small button--link services__button"
+            >
+              View more
+              <i class="uil uil-arrow-right button__icon"></i>
+            </span>
+
+            <div class="services__modal">
+              <div class="services__modal-content">
+                <h4 class="services__modal-title">
+                  Backend <br />
+                  Developer
+                </h4>
+                <i class="uil uil-times services__modal-close"></i>
+
+                <ul class="services__modal-services grid">
+                  <li class="services__modal-service">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>I develop the user interface</p>
+                  </li>
+                  <li class="services__modal-service">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>Web page development</p>
+                  </li>
+                  <li class="services__modal-service">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>I develop the user interface</p>
+                  </li>
+                  <li class="services__modal-service">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>Web page development</p>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-------------------- PROTIFOLIO -------------------->
+      <section class="portifoio section" id="portifolio">
+        <h2 class="section__title">Portifolio</h2>
+        <span class="section__subtitle">Most recent work</span>
+
+        <div class="portifolio__container container swiper-container">
+          <div class="swiper-wrapper">
+            <!-------------------- Portifolio 1 -------------------->
+            <div class="portifolio__content grid swiper-slide">
+              <img
+                src="./assets/img/portfolio1.jpg"
+                alt=""
+                class="portifolio__img"
+              />
+
+              <div class="portifolio__data">
+                <h3 class="portifolio__title">Modern Website</h3>
+                <p class="portifolio__description">
+                  Website adaptable to all devices!
+                </p>
+                <a
+                  href="#"
+                  class="button button--flex button--small portifolio__button"
+                >
+                  Demo <i class="uil uil-arrow-right button__icon"></i>
+                </a>
+              </div>
+            </div>
+
+            <!-------------------- Portifolio 2 -------------------->
+            <div class="portifolio__content grid swiper-slide">
+              <img
+                src="./assets/img/portfolio2.jpg"
+                alt=""
+                class="portifolio__img"
+              />
+
+              <div class="portifolio__data">
+                <h3 class="portifolio__title">Brand Design</h3>
+                <p class="portifolio__description">
+                  Website adaptable to all devices!
+                </p>
+                <a
+                  href="#"
+                  class="button button--flex button--small portifolio__button"
+                >
+                  Demo <i class="uil uil-arrow-right button__icon"></i>
+                </a>
+              </div>
+            </div>
+
+            <!-------------------- Portifolio 3 -------------------->
+            <div class="portifolio__content grid swiper-slide">
+              <img
+                src="./assets/img/portfolio3.jpg"
+                alt=""
+                class="portifolio__img"
+              />
+
+              <div class="portifolio__data">
+                <h3 class="portifolio__title">Online Store</h3>
+                <p class="portifolio__description">
+                  Website adaptable to all devices!
+                </p>
+                <a
+                  href="#"
+                  class="button button--flex button--small portifolio__button"
+                >
+                  Demo <i class="uil uil-arrow-right button__icon"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <!-------------------- Add rolls -------------------->
+          <div class="swiper-button-next">
+            <i class="uil uil-angle-right-b swiper-portifolio-icon"></i>
+          </div>
+          <div class="swiper-button-prev">
+            <i class="uil uil-angle-left-b swiper-portifolio-icon"></i>
+          </div>
+          <!-------------------- Add pagination -------------------->
+          <div class="swiper-pagination"></div>
+        </div>
+      </section>
     </main>
+    <script src="./assets/js/swiper-bundle.min.js"></script>
     <script src="./assets/js/main.js"></script>
   </body>
 </html>
