correção section portfolio in 1024px

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <title>Alerrandro Janio - Portfolio</title>
   </head>
   <body>
-    <!-- TODO: Corrigir espaçamento em QUALIFICATIONS -->
     <!-- TODO: Corrigir PORTFOLIO em screen 1024px -->
 
     <header class="header" id="header">
@@ -435,7 +434,7 @@
             >
               <!-------------------- Qualification 1 -------------------->
               <div class="qualification__data">
-                <div>
+                <div class="qualification__data-child">
                   <h3 class="qualification__title">Técnico em Informática</h3>
                   <span class="qualification__subtitle">EEEP Manoel Mano</span>
                   <div class="qualifcation__calendar">
@@ -512,7 +511,7 @@
             <div class="qualification__content" data-content id="work">
               <!-------------------- Qualification 5 -------------------->
               <div class="qualification__data">
-                <div>
+                <div class="qualification__data-child">
                   <h3 class="qualification__title">Software Enginner</h3>
                   <span class="qualification__subtitle">Spain - Institute</span>
                   <div class="qualifcation__calendar">
@@ -548,7 +547,7 @@
 
               <!-------------------- Qualification 7 -------------------->
               <div class="qualification__data">
-                <div>
+                <div class="qualification__data-child">
                   <h3 class="qualification__title">Web Development</h3>
                   <span class="qualification__subtitle">Peru - Univerity</span>
                   <div class="qualifcation__calendar">
@@ -1000,7 +999,7 @@
               <a href="#portfolio" class="footer__link">Portifólio</a>
             </li>
             <li>
-              <a href="#contact" class="footer__link">Contate-me</a>
+              <a href="#contact" class="footer__link">Contato</a>
             </li>
           </ul>
 
